[bdist_wheel]
# wheels should be OS-specific:
# their names must contain macOS/manulinux1/2010/2014/Windows identifiers
universal = 0

[metadata]
name = yayarl
version = attr: yayarl.__version__
url = https://github.com/robinvandernoord/yayarl
project_urls =
  Chat: Matrix = https://matrix.to/#/#robinvandernoord-space:matrix.org
  CI: GitHub Workflows = https://github.com/robinvandernoord/yayarl/actions?query=branch:master
  Code of Conduct = https://github.com/robinvandernoord/.github/blob/master/CODE_OF_CONDUCT.md
  Coverage: codecov = https://codecov.io/github/robinvandernoord/yayarl
  Docs: Changelog = https://github.com/robinvandernoord/yayarl/blob/master/CHANGES.rst#changelog
  Docs: RTD = https://yarl.aio-libs.org
  GitHub: issues = https://github.com/robinvandernoord/yayarl/issues
  GitHub: repo = https://github.com/robinvandernoord/yayarl
description = "Yet another YARL"; A fork with `requests` integration
# long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = Robin van der Noord
author_email = robin@trialandsuccess.nl
maintainer = Robin van der Noord <team@aiohttp.org>
maintainer_email = robin@trialandsuccess.nl
license = Apache-2.0
license_files =
  LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Programming Language :: Cython
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

  Topic :: Internet :: WWW/HTTP
  Topic :: Software Development :: Libraries :: Python Modules
keywords =
  cython
  cext
  yarl
  yayarl

[options]
python_requires = >=3.10
# Ref:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#using-a-src-layout
# (`src/` layout)
# package_dir =
#   = src
packages =
  yayarl
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
zip_safe = False
include_package_data = True

install_requires =
  idna >= 2.0
  multidict >= 4.0
  typing-extensions >= 3.7.4; python_version < "3.8"
  requests ~= 2.31.0

[options.package_data]
# Ref:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
# (see notes for the asterisk/`*` meaning)
* =
  *.so

[exclude_package_data]
* =
  *.c
  *.h


[tool:pytest]
addopts = --cov=yayarl -v
norecursedirs = dist docs build .tox .eggs venv virtualenv .git
minversion = 3.8.2
testpaths = tests/
junit_suite_name = yayarl_test_suite
filterwarnings =
    error
    # https://github.com/pytest-dev/pytest/issues/10977 and https://github.com/pytest-dev/pytest/pull/10894
    ignore:ast\.(Num|NameConstant|Str) is deprecated and will be removed in Python 3\.14; use ast\.Constant instead:DeprecationWarning:_pytest
    ignore:Attribute s is deprecated and will be removed in Python 3\.14; use value instead:DeprecationWarning:_pytest

[pep8]
max-line-length=79

[flake8]
ignore = E203,E301,E302,E704,W503,W504,F811
max-line-length = 88

[isort]
profile=black

[mypy]
# check_untyped_defs = True
# disallow_any_generics = True
# disallow_untyped_defs = True
# follow_imports = silent
# strict_optional = True
# warn_redundant_casts = True
# warn_unused_ignores = True

[mypy-idna]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true
